--- a/index.org
+++ b/index.org
@@ -147,7 +147,7 @@ Some rooms have special directions that connect to, these go to a specific cordn
           ("south","east","west"))
 
       MAP['100'] = Room(
-          "Upper Landing"
+          "Upper Landing",
           '100',
           ("north","south","east","west"))
 
@@ -187,7 +187,8 @@ Some rooms have special directions that connect to, these go to a specific cordn
           return None
 
       <<Connect_Rooms>>
-    
+      <<Connection_Test_Methods>>
+
 
 
 
@@ -212,8 +213,18 @@ The connect function binds two rooms together at the opposet edge.
 | down  | up       |
 
 #+name: Connect_Rooms
-#+BEGIN_SRC python :var edges=edge_table
+#+BEGIN_SRC python :var edges=edge_table() 
   def connect(self, direction, room):
+      edge_table = [
+          ["north","south"],
+          ["south","north"],
+          ["east","west"],
+          ["west","east"],
+          ["in","out"],
+          ["out","in"],
+          ["up","down"],
+          ["down","up"]
+      ]
       opposite_direction = None
       for d in edge_table:
           if d[0] == direction:
@@ -227,40 +238,70 @@ The connect function binds two rooms together at the opposet edge.
       room.edges[opposite_direction] = self
       return None
 
-    
+
 #+END_SRC
 
 ** Check Connection
+#+name: Connection_Test_Methods
 #+BEGIN_SRC python
   def is_connected_at(self, direction):
       if self.edges[direction] != None:
           return True
       else:
           return False
+
+  def is_connected_to(self,room):
+      if room in self.edges.values():
+          return True
+      else:
+          return False
+
+  def is_connected_to_at(self, room, direction):
+      condition1 = self.is_connected_at(direction)
+      condition2 = self.is_connected_to(room)
+      if condition1 and condition2:
+          return True
+      else:
+          return False
+    
 #+END_SRC
 
 ** Tests
 #+name: Map_Tests
 #+BEGIN_SRC python :tangle tests/map_tests.py 
-  import unittests
+  import unittest
   import sys
-  from trator import housemap
+  from traitor import housemap
 
   class MapUnitTests(unittest.TestCase):
 
       def setUp(self):
-          self.MAP = housemap.__init__()
+          self.MAP = housemap.setup()
+        
 
-      def test_check_connections(self):
-          self.assertEqual(self.MAP['000'].edges['north'],MAP['001'])
+      def test_if_rooms_exist(self):
+          list_of_rooms = [[r.key(),r.value()] for r in self.MAP]
+          self.assertNotEqual(len(list_of_rooms),0)
 
+      def test_if_rooms_connected(self):
 
+          self.assertTrue(
+          self.MAP['000'].is_connected_at('north')
+              )
+          self.assertTrue(
+          self.MAP['001'].is_connected_at('north')
+              )
+          self.assertTrue(
+          self.MAP['002'].is_connected_at('up')
+              )
+        
+        
 
 
   if __name__ == '__main__':
       unittest.main()
       sys.exit()
-    
+
 
 #+END_SRC
 
