Main actually does something.
I set up a "cli" to actually play the game in.
Right now it can move the "player" in directions.
However the house currently does not exist in euclidian space so I'll
need to fix that.

--- a/index.org
+++ b/index.org
@@ -168,7 +168,7 @@ Some rooms have special directions that connect to, these go to a specific cordn
 
           self.MAP = MAP
 
-      <<map_discover>>
+      <<map_discover>>  
 
 
 
@@ -432,21 +432,76 @@ If the newly discoved room has an event in it, the player must stop moving and a
 * TODO Haunts
 * Engine
 We start putting things together here in the engine
-#+BEGIN_SRC python :tangle traitor/main.py :noweb yes 
-
-  from traitor import housemap
+#+BEGIN_SRC python :tangle traitor/main.py :noweb yes  :shebang #!/usr/bin/env python3
+  import sys
+  import housemap
   <<Character_Object>>
+
   house = housemap.Map()
-  me = Character(
-      "Zeeter",
-      "01/17",
-      ['dead',9,9,9,9,9,9,9,9,9],
-      ['dead',9,9,9,9,9,9,9,9,9],
-      ['dead',9,9,9,9,9,9,9,9,9],
-      ['dead',9,9,9,9,9,9,9,9,9],
-  )
 
-  me.pos = house.MAP[(0,0,0)]
+  class player(object):
 
+      def __init__(self, house):
+
+          self.house = house
+          self.pos = self.house.MAP[(0,0,0)]
+          return None
+
+      def repl(self):
+          prompt = '==>'
+          while True:
+
+              i = input(prompt)
+              if i == "go":
+                  direction = input("Which direction: ")
+                  self.go(direction)
+              elif i == "quit":
+                  self.quit()
+
+              elif i == "":
+                  pass
+              else:
+                  print("Im sorry Dave, I'm afraid I can't do that")
+
+
+
+      def go(self,direction):
+          try:
+              pos = self.house.MAP[self.pos.move(direction)]
+              print(pos.name)
+              return None
+          except AssertionError:
+              x,y,z = self.pos.get_coordnate()
+
+              if direction == "north":
+                  y += 1
+              if direction == "south":
+                  y -= 1
+              if direction == "east":
+                  x += 1
+              if direction == "west":
+                  x -= 1
+
+              self.house.discover((x,y,z),housemap.Room(
+                  "test room",
+                  ['north','south','east','west'])
+              )
+              self.house.MAP[(x,y,z)].set_coordnate((x,y,z))
+              self.pos.bi_connect(direction, self.house.MAP[(x,y,z)])
+              self.pos = self.house.MAP[self.pos.move(direction)]
+              print(self.pos.name)
+              return None
+          except KeyError:
+              print("Invaild direction!")
+              print(self.pos.name)
+              return None
+
+      def quit(self):
+          sys.exit()
+
+
+  if __name__ == '__main__':
+      me = player(house)
+      me.repl()
 #+END_SRC
 
