Fixed magic house.
I added in some code that prevents the house from over-writing the
previous room

--- a/index.org
+++ b/index.org
@@ -429,6 +429,7 @@ If the newly discoved room has an event in it, the player must stop moving and a
 ** TODO Items
 ** TODO Events
 ** TODO Omens
+
 * TODO Haunts
 * Engine
 We start putting things together here in the engine
@@ -467,8 +468,8 @@ We start putting things together here in the engine
 
       def go(self,direction):
           try:
-              pos = self.house.MAP[self.pos.move(direction)]
-              print(pos.name)
+              self.pos = self.house.MAP[self.pos.move(direction)]
+              print(self.pos.name, self.pos.get_coordnate())
               return None
           except AssertionError:
               x,y,z = self.pos.get_coordnate()
@@ -482,18 +483,24 @@ We start putting things together here in the engine
               if direction == "west":
                   x -= 1
 
-              self.house.discover((x,y,z),housemap.Room(
-                  "test room",
-                  ['north','south','east','west'])
-              )
-              self.house.MAP[(x,y,z)].set_coordnate((x,y,z))
-              self.pos.bi_connect(direction, self.house.MAP[(x,y,z)])
-              self.pos = self.house.MAP[self.pos.move(direction)]
-              print(self.pos.name)
-              return None
+              try:
+                  self.pos.bi_connect(direction, self.house.MAP[(x,y,z)])
+                  self.pos = self.house.MAP[self.pos.move(direction)]
+                  print(self.pos.name, self.pos.get_coordnate())
+              except KeyError:
+
+                  self.house.discover((x,y,z),housemap.Room(
+                      "test room",
+                      ['north','south','east','west'])
+                  )
+                  self.house.MAP[(x,y,z)].set_coordnate((x,y,z))
+                  self.pos.bi_connect(direction, self.house.MAP[(x,y,z)])
+                  self.pos = self.house.MAP[self.pos.move(direction)]
+                  print(self.pos.name, self.pos.get_coordnate())
+                  return None
           except KeyError:
               print("Invaild direction!")
-              print(self.pos.name)
+              print(self.pos.name, self.pos.get_coordnate())
               return None
 
       def quit(self):
